[package]
name = "hello-wasm"
version = "0.1.0"
description = "A sample project with wasm-pack"
authors = ["“zhaol2012\ngit config --global user.email zhaol2012@gmail.com"]
license = "MIT/Apache-2.0"
repository = "https://github.com/zhaol2012/hello-wasm.git"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"